--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
-    "handlebars": "^4.7.7",
-    "nodemon": "^2.0.15"
+    "handlebars": "^4.7.7"
   }
 }
